<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/colorPrimary"
    android:columnCount="3"
    android:rowCount="4"
    android:columnOrderPreserved="true"
    android:rowOrderPreserved="true">


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="4"
        android:layout_gravity="center">

        <Button
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:text="@string/one"
            android:id="@+id/numPad1"
            android:layout_row="0"
            android:layout_column="0"
            android:background="@drawable/circle"
            android:textSize="30sp"
            android:outlineProvider="background"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:contextClickable="true"
            android:backgroundTint="#ffffff"
            android:textColor="#ffffff"
            android:onClick="numPad" />

        <Button
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:text="@string/two"
            android:id="@+id/numPad2"
            android:layout_gravity="center"
            android:layout_row="0"
            android:layout_column="1"
            android:background="@drawable/circle"
            android:textSize="30sp"
            android:outlineProvider="background"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_margin="7dp"
            android:contextClickable="true"
            android:backgroundTint="#ffffff"
            android:textColor="#ffffff"
            android:onClick="numPad" />

        <Button
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:text="@string/three"
            android:id="@+id/numPad3"
            android:layout_row="0"
            android:layout_column="2"
            android:background="@drawable/circle"
            android:textSize="30sp"
            android:outlineProvider="background"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:contextClickable="true"
            android:backgroundTint="#ffffff"
            android:textColor="#ffffff"
            android:onClick="numPad" />

        <Button
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:text="@string/four"
            android:id="@+id/numPad4"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@drawable/circle"
            android:textSize="30sp"
            android:outlineProvider="background"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:contextClickable="true"
            android:backgroundTint="#ffffff"
            android:textColor="#ffffff"
            android:onClick="numPad" />

        <Button
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:text="@string/five"
            android:id="@+id/numPad5"
            android:layout_row="1"
            android:layout_column="1"
            android:background="@drawable/circle"
            android:textSize="30sp"
            android:outlineProvider="background"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:contextClickable="true"
            android:backgroundTint="#ffffff"
            android:textColor="#ffffff"
            android:onClick="numPad" />

        <Button
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:text="@string/six"
            android:id="@+id/numPad6"
            android:layout_row="1"
            android:layout_column="2"
            android:background="@drawable/circle"
            android:textSize="30sp"
            android:outlineProvider="background"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:contextClickable="true"
            android:backgroundTint="#ffffff"
            android:textColor="#ffffff"
            android:onClick="numPad" />

        <Button
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:text="@string/seven"
            android:id="@+id/numPad7"
            android:layout_row="2"
            android:layout_column="0"
            android:background="@drawable/circle"
            android:textSize="30sp"
            android:outlineProvider="background"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:contextClickable="true"
            android:backgroundTint="#ffffff"
            android:textColor="#ffffff"
            android:onClick="numPad" />

        <Button
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:text="@string/eight"
            android:id="@+id/numPad8"
            android:layout_row="2"
            android:layout_column="1"
            android:background="@drawable/circle"
            android:textSize="30sp"
            android:outlineProvider="background"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:contextClickable="true"
            android:backgroundTint="#ffffff"
            android:textColor="#ffffff"
            android:onClick="numPad" />

        <Button
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:text="@string/nine"
            android:id="@+id/numPad9"
            android:layout_row="2"
            android:layout_column="2"
            android:background="@drawable/circle"
            android:textSize="30sp"
            android:outlineProvider="background"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:contextClickable="true"
            android:backgroundTint="#ffffff"
            android:textColor="#ffffff"
            android:onClick="numPad" />

        <Button
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:text="@string/zero"
            android:id="@+id/numPad0"
            android:layout_row="3"
            android:layout_column="1"
            android:background="@drawable/circle"
            android:textSize="30sp"
            android:outlineProvider="background"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_gravity="center"
            android:layout_margin="7dp"
            android:contextClickable="true"
            android:backgroundTint="#ffffff"
            android:textColor="#ffffff"
            android:onClick="numPad" />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/diagPassword"
        android:id="@+id/keyPrompt"
        android:layout_gravity="center_horizontal|top"
        android:textColor="#ffffff"
        android:textSize="30dp"
        android:fontFamily="sans-serif-medium" />

</FrameLayout>
